# test_pj001_fastAPI

./: pyproject.toml
001_fastapi/: database.py  main.py  schemas.py
old/: main.py
