[tool.poetry]
name = "001-fastapi"
version = "0.1.0"
description = ""
authors = ["YutaOtsuka <yuta.syukatsu@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.0"
uvicorn = "^0.29.0"
requests = "^2.31.0"
httpie = "^3.2.2"
sqlalchemy = "^2.0.30"
asyncpg = "^0.29.0"
psycopg2 = "^2.9.9"
pydantic = "^2.7.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
